<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NowPlayingActivity">

    <ImageView
        android:id="@+id/song_icon_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/album_art"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/song_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Song name" />

    <TextView
        android:id="@+id/song_artist_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Artist" />

    <TextView
        android:id="@+id/song_year_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="Year of release" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_time"
            android:textAlignment="center"
            android:textSize="20sp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:progress="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total_time"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/skip_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:contentDescription="@string/skip_previous"
            android:src="@drawable/ic_skip_previous_black_24dp" />

        <ImageButton
            android:id="@+id/play_image_button"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:contentDescription="@string/play_or_pause"
            android:src="@drawable/ic_play_arrow_black_96dp" />

        <ImageView
            android:id="@+id/skip_next_button"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:contentDescription="@string/skip_next"
            android:src="@drawable/ic_skip_next_black_24dp" />

    </LinearLayout>

</LinearLayout>